# pyqa-apiv2

./: .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  config.py  config_txmatching.py  output.json  pyproject.toml  pytest.ini  pytest_html_report.html  report-render.sh  rsa.pub  schedule.py  settings.py  style.sh
.github/workflows/: ci.yaml  publish.yaml  tests.yaml
archive/: output_1635858983.730447.json  output_1635861517.768859.json  output_1635861575.947901.json  output_1635861611.92703.json  output_1635861650.603851.json  output_1635861883.429891.json  output_1635861997.684917.json  output_1635863249.1360672.json  output_1635863279.845942.json  output_1635864739.5559192.json  output_1635865627.681756.json  output_1635867055.243118.json  output_1635867156.990815.json  output_1635867243.95155.json  output_1635874678.409662.json  output_1635874805.089928.json  output_1635875174.151721.json  output_1635875189.206492.json  output_1635875351.653352.json  output_1635875592.684444.json  output_1635875667.6836.json  output_1636556767.574347.json  output_1636557660.170178.json  output_1636557890.222992.json  output_1636558416.410835.json  output_1636558446.612413.json  output_1637753131.128586.json  output_1637754958.205062.json  output_1637755343.438091.json  output_1637757211.1898901.json  output_1637776903.199622.json  output_1637776983.4335759.json  output_1637777256.017832.json
pyqa_apiv2/: __init__.py
scripts/: setup_local_test_env.sh
tests/: conftest.py
tests/api/: __init__.py  base.py  transactionmatching_base.py
tests/helpers/: constants.py  (+8 more)
(+261 files in other folders)
