[tool.poetry]
name = "pyqa-apiv2"
version = "0.0.0"
description = "Automation Suite for Angelia (api v2)"
authors = ["Navya James <njames@bink.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/binkhq/_packaging/binkhq/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.4"
pytest-bdd = "<6.0"
logger = "^1.4"
jsonpath = "^0.82.2"
click = "^8.1.7"
faker = "^22.4.0"
psycopg2-binary = "^2.9.9"
json-diff = "^1.5.0"
arrow = "^1.3.0"
pyjwt = "^2.8.0"
apscheduler = "^3.10.4"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"
shared-config-storage = "^1.6.2"
pytest-html = "<4"
deepdiff = "^6.7.1"
jwcrypto = "^1.5.1"
pendulum = "^3.0.0"
pytz = "^2023.3.post1"
paramiko = "^3.4.0"
soteria = "^1.6.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[tool.ruff]
line-length = 120

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
